c, c++, cgraphunit: Prevent duplicated -Wunused-value warnings [PR108079]

On the following testcase, we warn with -Wunused-value twice, once
in the FEs and later on cgraphunit again with slightly different
wording.

The following patch fixes that by registering a warning suppression in the
FEs when we warn and not warning in cgraphunit anymore if that happened.

2023-03-10  Jakub Jelinek  <jakub@redhat.com>

	PR c/108079
gcc/
	* cgraphunit.cc (check_global_declaration): Don't warn for unused
	variables which have OPT_Wunused_variable warning suppressed.
gcc/c/
	* c-decl.cc (pop_scope): Suppress OPT_Wunused_variable warning
	after diagnosing it.
gcc/cp/
	* decl.cc (poplevel): Suppress OPT_Wunused_variable warning
	after diagnosing it.
gcc/testsuite/
	* c-c++-common/Wunused-var-18.c: New test.